# RBACimplementation

./: .gitignore  CMakeLists.txt  LICENCE  README.md
data/: board.txt  users.csv
include/controllers/: AdminController.h  AuthController.h  WorkerController.h
include/editor/: Editor.h
include/models/: Person.h
include/utils/: Animation.h  Tools.h
include/views/: MenuVIew.h  TableView.h
src/: main.cpp
src/controllers/: AdminController.cpp  AuthController.cpp  WorkerController.cpp
src/editor/: Editor.cpp
src/models/: Person.cpp
src/utils/: Tools.cpp
src/views/: MenuView.cpp  TableView.cpp
